--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # Test binary, built with `go test -c`
 *.test
+/local-test/
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
@@ -17,9 +18,13 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Go workspace file
-go.work
-go.work.sum
-
 # env file
 .env
+
+/migrations/
+/gomiger.rc.yaml
+
+# MAC OS
+.DS_Store
+.AppleDouble
+.LSOverride
