--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,17 @@ on:
   release:
     types: [published]
 
+env:
+  GO_VERSION: stable
+  GOLANGCI_LINT_VERSION: v2.5.0
+
 jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['1.21', '1.23']
+        go-version: ['1.23']
         mongodb-version: ['6.0', '7.0']
     
     services:
@@ -30,12 +34,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
+    - uses: actions/setup-go@v5
       with:
         go-version: ${{ matrix.go-version }}
-
     - name: Cache Go modules
       uses: actions/cache@v4
       with:
@@ -43,28 +44,23 @@ jobs:
         key: ${{ runner.os }}-go-${{ matrix.go-version }}-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-${{ matrix.go-version }}-
-
     - name: Download dependencies
       run: |
         cd core && go mod download
         cd ../mongomiger && go mod download
         cd ../examples && go mod download
-
     - name: Run tests (Core)
       run: cd core && go test -v -race -coverprofile=coverage.out ./...
-
     - name: Run tests (MongoDB Plugin)
       env:
         GOMIGER_URI: mongodb://localhost:27017/gomiger_test
       run: cd mongomiger && go test -v -race -coverprofile=coverage.out ./...
-
     - name: Upload coverage to Codecov (Core)
       uses: codecov/codecov-action@v4
       with:
         file: ./core/coverage.out
         flags: core
         name: core-${{ matrix.go-version }}-mongo-${{ matrix.mongodb-version }}
-
     - name: Upload coverage to Codecov (MongoDB)
       uses: codecov/codecov-action@v4
       with:
@@ -73,16 +69,16 @@ jobs:
         name: mongomiger-${{ matrix.go-version }}-mongo-${{ matrix.mongodb-version }}
 
   detect-modules:
-      runs-on: ubuntu-latest
-      outputs:
-        modules: ${{ steps.set-modules.outputs.modules }}
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-go@v5
-          with:
-            go-version: ${{ env.GO_VERSION }}
-        - id: set-modules
-          run: echo "modules=$(go list -m -json | jq -s '.' | jq -c '[.[].Dir]')" >> $GITHUB_OUTPUT
+    runs-on: ubuntu-latest
+    outputs:
+      modules: ${{ steps.set-modules.outputs.modules }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - id: set-modules
+        run: echo "modules=$(go list -m -json | jq -s '.' | jq -c '[.[].Dir]')" >> $GITHUB_OUTPUT
 
   lint:
     needs: detect-modules
@@ -104,41 +100,34 @@ jobs:
   security:
     name: Security Scan
     runs-on: ubuntu-latest
+    env:
+      GO111MODULE: on
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+      - name: Run Gosec Security Scanner
+        uses: securego/gosec@master
+        with:
+          # we let the report trigger content trigger a failure using the GitHub Security features.
+          args: '-no-fail -fmt sarif -out results.sarif ./...'
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          # Path to SARIF file relative to the root of the repository
+          sarif_file: results.sarif
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-
-    - name: Run Gosec Security Scanner
-      uses: securego/gosec@master
-      with:
-        args: '-fmt sarif -out gosec.sarif ./...'
-
-    - name: Upload SARIF file
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: gosec.sarif
   build:
     name: Build
     runs-on: ubuntu-latest
     needs: [test, lint]
     steps:
     - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
+    - uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
-
+        go-version: ${{ env.GO_VERSION }}
     - name: Build Core
       run: cd core && go build ./...
-
     - name: Build MongoDB Plugin
       run: cd mongomiger && go build ./...
-    
     - name: Build Examples
       run: cd examples && go build ./...
 
@@ -151,12 +140,9 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
+    - uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
-
+        go-version: ${{ env.GO_VERSION }}
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v6
       with:
@@ -171,8 +157,6 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-
-    - name: Dependency Review
-      uses: actions/dependency-review-action@v4
+      - uses: actions/checkout@v4
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v4
